--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <version.consul-api>1.2.1</version.consul-api>
+        <version.consul-api>1.4.5</version.consul-api>
         <version.slf4j>1.7.21</version.slf4j>
         <version.slf4j-log4j>1.7.21</version.slf4j-log4j>
         <version.log4j>1.2.17</version.log4j>
@@ -54,6 +54,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
         </dependency>
 
     </dependencies>
